--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Firebase Hosting (Vite + React)
 on:
   push:
     branches:
-      - dev  # change this to 'main' if you want to deploy from main
+      - dev  # change to 'main' if you want to deploy from main
 
 jobs:
   build:
@@ -25,7 +25,7 @@ jobs:
         run: npm run build
 
       - name: Deploy to Firebase Hosting
-        uses: w9jds/firebase-action@v13
+        uses: w9jds/firebase-action@master  # ✅ fixed version
         with:
           args: deploy --only hosting
         env:
